# MotionAnchor

./: .gitignore  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  site.html  tailwind.config.ts  vercel.json  vite.config.ts
.github/workflows/: release.yml
apps/site/: index.html  package.json  tsconfig.json  vite.config.ts
assets/: SettingsPage-DRxHmQPK.js  index-DFSBL-WZ.css  index-DjTtEO9I.js
plugins/builtin.directional-pull-ring/: plugin.json
plugins/builtin.fullscreen-border/: plugin.json
plugins/builtin.fullscreen-grid/: plugin.json
plugins/builtin.fullscreen-reference-lines/: plugin.json
plugins/builtin.static-ring/: plugin.json
src/: App.css  App.tsx  animation.ts  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  plugins.rs  raw_input.rs  settings_store.rs  shortcuts.rs
src-tauri/src/input/: mod.rs  profile.rs  runtime.rs
src/input/: defaultProfile.ts  inputRuntime.ts
src/overlay/: OverlayStage.tsx  appearance.ts  globalPaintPresets.ts
src/plugins/: definePlugin.ts  environment.ts  registry.ts  renderers.ts  runtimeSettings.ts  types.ts
src/preferences/: storage.ts  types.ts  useAppPreferences.ts
src/settings/: AboutPanel.tsx  AppInfoPanel.tsx  AppearanceSettings.tsx  DiagnosticsPanel.tsx  InputSettingsPanel.tsx  PluginEnvironmentPanel.tsx  PluginSettingEditor.tsx  RawMouseDebugPanel.tsx  RawMouseSettingsPanel.tsx  SettingsPage.tsx  StartPage.tsx  SystemSettings.tsx  WindowTitleBar.tsx  settingsRuntime.ts
src/shortcuts/: ShortcutKeys.tsx  (+6 more)
(+46 files in other folders)
