[package]
name = "motion-anchor"
version = "0.1.0"
description = "MotionAnchor desktop overlay app"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"

[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
